refactor!: refactored machine energy systems